--- a/source/less/block/search.less
+++ b/source/less/block/search.less
@@ -10,6 +10,7 @@
 
   @media (max-width: 799px) {
     font-size: 20px;
+    margin: 2px 0 5px 0;
   }
 }
 
@@ -39,7 +40,7 @@
   }
 
   @media (max-width: 799px) {
-    padding: 19px 50px 19px 24px;
+    padding: 13px 50px 9px 9px;
   }
 }
 
@@ -84,14 +85,14 @@
 
   @media (max-width: 799px) {
     align-items: center;
-    padding: 40px 20px 40px 20px;
+    padding: 40px 20px 30px 15px;
     width: 100%;
     min-height: unset;
   }
 
   @media (min-width: 800px) and (max-width: 1279px) {
     width: 100%;
-    padding: 40px 20px 40px 20px;
+    padding: 40px 20px 30px 15px;
   }
 
   @media (min-width: 1280px) {
@@ -133,6 +134,11 @@
   font-weight: 400;
   font-size: 16px;
   color: @basic-white;
+
+  @media(max-width: 799px) {
+    font-size: 12px;
+    margin-left: 10px;
+  }
 }
 
 .search__box--mobile {
