--- a/source/less/block/menu.less
+++ b/source/less/block/menu.less
@@ -13,7 +13,7 @@
   padding: 10px 24px 10px 24px;
 
   @media (max-width: 799px) {
-    padding: 9px 15px 10px 15px;
+    padding: 5px 15px 10px;
   }
 }
 
